tests/NormalTests/paczka1/fuzzy1/25971580.err
Error in line 8: xKKOqaj S65 80,4
Error in line 13: wSDdhhIXblw S65 37,3
Error in line 15: wSDdhhIXblw S393 72,3
Error in line 7: 42438Ejjac7 S722 69,9
Error in line 20: K0pT95¢HDl S65 34,8
Error in line 17: 42438Ejjac7 A800 14,3
Error in line 19: K0pT95GHDl S393 69,3
Error in line 24: xKKOqaj S722 20,9
Error in line 14: whYd A800 17,9
